bin_PROGRAMS = dida-mpi

dida_mpi_CPPFLAGS = -I$(top_srcdir)/Common

dida_mpi_LDADD = $(MPI_LIBS)

dida_mpi_SOURCES = \
	Common/Uncompress.cpp \
	Common/Uncompress.h \
	Common/SignalHandler.cpp \
	Common/SignalHandler.h \
	Common/Fcontrol.cpp \
	Common/Fcontrol.h \
	Common/prt.cpp \
	Common/prt.h \
	Common/StringUtil.h \
	dida.cpp
